migration- add column to users
